# currencies

./: .gitignore  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml
client/: Dockerfile  nuxt.config.ts  package.json  schema.json
client/components/: CoinFilter.vue  CoinUnload.vue  DateFilter.vue
client/components/views/: CoinsView.vue  NoChoiceCoinsView.vue  OneChoiceCoinsView.vue
client/composables/: useDataFetch.ts
client/layouts/: default.vue
client/pages/: index.vue
client/plugins/: vuetify.ts
client/public/: storage
client/services/: index.ts
client/types/: index.ts
client/types/models/: Rate.ts  Value.ts
scripts/: generate_types.sh  init_storage.sh
server/: .flake8  Dockerfile  db.sqlite3  openapi-schema.yml  pyproject.toml  whitelist.txt
server/apps/: __init__.py
server/apps/coins/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
server/apps/coins/helpers/: __init__.py  coin_writer.py  document_generator.py
server/apps/coins/management/commands/: init_coins.py
server/apps/coins/management/seed/: rates.xml
server/apps/coins/migrations/: 0001_initial.py  0002_value.py  0003_alter_value_value.py
server/apps/coins/templates/: document.docx  document.xml
server/apps/coins/templatetags/: __init__.py  get_item.py
server/currencies/: settings.py  swagger.py  urls.py
server/storage/: readme.md
